--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="test1.css" />
-    <title>Web Design Mastery | Burger House</title>
+    <title>Padang Asli</title>
   </head>
   <body>
     <header class="header">
